2014-08-03 German Arias <germanandre@gmx.es>

	* Modules/Editors/ProjectCenter/PCEditor.m: Don't use
	PCAuxiliaryWindow. This avoid the use of FindPanel.

2014-07-30 Riccardo Mottola <rm@gnu.org>

	* Framework/PCEditorManager.m
	* Framework/PCProjectBuilder.m
	* Headers/Protocols/CodeEditor.h
	* Modules/Editors/ProjectCenter/PCEditor.h
	* Modules/Editors/ProjectCenter/PCEditor.m
	Convert line numbers to NSUInteger / integerValue

2014-05-06 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectBuilder.m
	Enhance clang support.

2014-05-03 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectBuilder.m
	Recognize also egcc and clang as compilers.

2014-05-03 Riccardo Mottola <rm@gnu.org>

	* Framework/PCProjectBuilder.m
	Add recognition of fatal errors.

2014-04-08 German Arias <germanandre@gmx.es>

	* Modules/Editors/ProjectCenter/PCEditorView.m (-insertText:): Add a
	comment for last commit.

2014-04-06 German Arias <germanandre@gmx.es>

	* Headers/ProjectCenter/PCProjectLauncher.h: Add new variable
	_isErrorRunning.
	* Framework/PCProjectLauncher.m: Remove observer in -logStdOut: and
	-logErrOut:. And wait until receive all data in -runDidTerminate:.

2014-04-02 German Arias <germanandre@gmx.es>

	* Framework/PCFileCreator.m (-replaceTagsInFileAtPath:withProject:):
	Ensure UTF-8 when read and write a file	in Windows.
	* Modules/Editors/ProjectCenter/PCEditorView.m (-insertText:): Ensure
	UTF-8 when insert a text in Windows.

2014-04-02 German Arias <germanandre@gmx.es>

	* Framework/English.lproj/SaveModified.gorm: Use class PCAuxiliaryWindow
	to not display menu.

2014-04-02 German Arias <germanandre@gmx.es>

	* Framework/PCFileCreator.m: Removed two last commits. There is
	something wrong with these.

2014-03-30 German Arias <germanandre@gmx.es>

	* Framework/PCFileCreator.m: Fix last change to ensure all string in the
	file is UTF-8, since GNU make can't handle UTF-16 (this change is for
	Windows).

2014-03-27 German Arias <germanandre@gmx.es>
